fix: correct Method 2 in README to use MAVEN_OPTS for preview features
The exec-maven-plugin's exec:java goal cannot directly pass JVM arguments
through configuration. Use MAVEN_OPTS environment variable instead.

Changes:
- README: Updated Method 2 to set MAVEN_OPTS="--enable-preview"
- pom.xml: Removed invalid commandlineArgs configuration

Testing:
✓ Method 2 (mvn exec:java) now works correctly with MAVEN_OPTS
✓ Application starts and shuts down gracefully

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>